have added buttons at the bottom of the home page and used mixins to do that. I have also finished the navigation and header

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,3 +1,27 @@
+.startNavigation{
+  display: flex;
+  justify-content: space-evenly;
+  h1{
+    padding: 20px;
+  }
+
+
+}
+.firstImage{
+  margin-right: 400px;
+  margin-left: 200px;
+  margin-bottom:30px;
+  width: 820px;
+  border-bottom: 2px dashed @navigation-border;
+  h3{
+    font-size: 30px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+}
+.btn{
+  .custom-btn(20px,sans-serif);
+}
 .home {
 
   .content-section {
@@ -22,6 +46,8 @@
       }
     }
   }
+
+  
 
   .inverse-content {
     padding-bottom: 30px;
