--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,17 @@
+.btn {
+  font-size: 20px;
+  font-family: sans-serif;
+  display: block;
+  background-color: teal;
+  margin: 0 10px 20px;
+  cursor: pointer;
+  width: 230px;
+  height: 45px;
+  border-radius: 10px;
+  color: white;
+  text-align: center;
+  padding-top: 10px;
+}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -168,6 +182,15 @@ img {
   width: 100%;
   margin: 0 auto;
 }
+nav {
+  display: flex;
+  justify-content: space-between;
+}
+nav a {
+  font-size: 16px;
+  font-family: 'Open Sans', sans-serif;
+  padding: 20px;
+}
 .footer {
   width: 100%;
   border-top: 2px dashed silver;
@@ -178,6 +201,39 @@ img {
   color: #212529;
   font-size: 1.6rem;
   padding: 20px;
+}
+.startNavigation {
+  display: flex;
+  justify-content: space-evenly;
+}
+.startNavigation h1 {
+  padding: 20px;
+}
+.firstImage {
+  margin-right: 400px;
+  margin-left: 200px;
+  margin-bottom: 30px;
+  width: 820px;
+  border-bottom: 2px dashed #C0C0C0;
+}
+.firstImage h3 {
+  font-size: 30px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+.btn {
+  font-size: 20px;
+  font-family: sans-serif;
+  display: block;
+  background-color: teal;
+  margin: 0 10px 20px;
+  cursor: pointer;
+  width: 230px;
+  height: 45px;
+  border-radius: 10px;
+  color: white;
+  text-align: center;
+  padding-top: 10px;
 }
 .home .content-section {
   margin: 30px 0;
