--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,11 @@
 // Navigation Styles here
+nav{
+    a{
+        font-size: 16px;
+        font-family: 'Open Sans', sans-serif;
+        padding: 20px;
+    }
+    display: flex;
+    justify-content: space-between;
+    
+}
