--- a/css/index.css
+++ b/css/index.css
@@ -209,6 +209,12 @@ nav a {
 .startNavigation h1 {
   padding: 20px;
 }
+@media ( max-width: 515px ) {
+  .startNavigation {
+    display: flex;
+    flex-direction: column;
+  }
+}
 .firstImage {
   margin-right: 400px;
   margin-left: 200px;
@@ -220,20 +226,6 @@ nav a {
   font-size: 30px;
   padding-top: 10px;
   padding-bottom: 10px;
-}
-.btn {
-  font-size: 20px;
-  font-family: sans-serif;
-  display: block;
-  background-color: teal;
-  margin: 0 10px 20px;
-  cursor: pointer;
-  width: 230px;
-  height: 45px;
-  border-radius: 10px;
-  color: white;
-  text-align: center;
-  padding-top: 10px;
 }
 .home .content-section {
   margin: 30px 0;
