--- a/less/home-page.less
+++ b/less/home-page.less
@@ -5,6 +5,11 @@
     padding: 20px;
   }
 
+  @media @mobile{
+    display:flex;
+    flex-direction: column;
+  }
+
 
 }
 .firstImage{
@@ -19,9 +24,7 @@
     padding-bottom: 10px;
   }
 }
-.btn{
-  .custom-btn(20px,sans-serif);
-}
+
 .home {
 
   .content-section {
