--- a/less/mixins.less
+++ b/less/mixins.less
@@ -18,4 +18,9 @@
 
 .btn{
     .custom-btn(20px,sans-serif);
+    @media @mobile{
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+      }
   }
