--- a/less/home-page.less
+++ b/less/home-page.less
@@ -8,6 +8,7 @@
   @media @mobile{
     display:flex;
     flex-direction: column;
+    align-items: center;
   }
 
 
@@ -23,6 +24,11 @@
     padding-top: 10px;
     padding-bottom: 10px;
   }
+
+  @media @mobile{
+    margin-left: 10px;
+    width: 95%;
+  }
 }
 
 .home {
@@ -32,17 +38,29 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-
+    @media @mobile{
+      display:flex;
+      flex-direction: column;
+      align-items: center;
+      
+    }
    
     
     .text-content {
       width: 48%;
       padding-right: 1%;
+      @media @mobile {
+        width: 95%;
+        
+      }
     }
 
     .img-content {
       width: 48%;
       padding-left: 1%;
+      @media @mobile {
+        width: 100%;
+      }
 
       img {
         border-radius: 10px;
@@ -55,6 +73,14 @@
   .inverse-content {
     padding-bottom: 30px;
     border-bottom: 2px dashed @navigation-border;
+
+    @media @mobile{
+      display:flex;
+      flex-direction: column-reverse;
+      align-items: center;
+      width: 100%;
+      
+    }
 
     .text-content {
       padding-left: 1%;
@@ -74,6 +100,9 @@
     img {
       border-radius: 10px;
     }
+    @media @mobile{
+      width: 100%;
+    }
   }
 
   .content-pick {
@@ -85,6 +114,18 @@
     .destination {
       width: 30%;
       margin-bottom: 30px;
+    }
+    @media @mobile{
+      display:flex;
+      flex-direction: column;
+      align-items: center;
+      width:100%;
+      padding-right: 50px;
+      padding-left: 50px;
+
+      .destination{
+        width: 100%;
+      }
     }
   }
 }// home
