--- a/css/index.css
+++ b/css/index.css
@@ -304,6 +304,9 @@ nav a {
 }
 @media ( max-width: 515px ) {
   .home .content-destination {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 100%;
   }
 }
