--- a/less/home-page.less
+++ b/less/home-page.less
@@ -101,6 +101,9 @@
       border-radius: 10px;
     }
     @media @mobile{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       width: 100%;
     }
   }
